--- a/viewer/index.html
+++ b/viewer/index.html
@@ -84,7 +84,9 @@
 				<p>・ファイルはいずれもtopojson</p>
 				<p>・表示区域は島嶼部など含むすべての地域が表示されるように調整している。その他の調整は元データに従う</p>
 				<p>・全国はsimplify 0.1％、都道府県は1％</p>
-				<p>・データの出典やファイルの詳細などは<a href="https://github.com/smartnews-smri/japan-topography" target="_blank">README</a>をご覧ください</p>
+				<p>・市区町村データの出典：国土交通省 国土数値情報（行政区域） https://nlftp.mlit.go.jp/ksj/ （2021年9月28日取得）</p>
+				<p>・選挙区データの出典：東京大学空間情報科学研究センター 西沢明 客員研究員 https://home.csis.u-tokyo.ac.jp/~nishizawa/senkyoku/ （2021年9月28日取得）</p>
+				<p>・ファイルの仕様などは<a href="https://github.com/smartnews-smri/japan-topography" target="_blank">README</a>をご覧ください</p>
 			</div>
     </div>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
