--- a/viewer/index.html
+++ b/viewer/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:description" content="市区町村・選挙区地形データのファイルをウェブブラウザで確認するためのサンプルページです" />
 		<meta property="og:image" content="https://smartnews-smri.github.io/japan-topography/viewer/img/image_1200_630.png" />
 		<meta name="twitter:card" content="summary_large_image" />
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.min.css"/>
 		<title>市区町村・選挙区地形データ 表示サンプル</title>
 	</head>
 	<body>
@@ -23,6 +23,7 @@
 			</div>
 			<select id="select-filetype">
 				<option value="municipality" selected>市区町村</option>
+				<option value="prefectures">都道府県</option>
 				<option value="constituency">選挙区</option>
 			</select>
 			<select id="select-prefecture">
@@ -78,20 +79,24 @@
 			<div id="map-block">
 				<svg id="map"></svg>
 			</div>
-			<p><a id="download-link" href="" download>個別にファイルをダウンロード</a></p>
+			<p>
+				<a id="download-geojson" href="" download>GeoJSONファイルをダウンロード</a>
+				<span class="separator">|</span>
+				<a id="download-topojson" href="" download>TopoJSONファイルをダウンロード</a>
+			</p>
 			<table id="table-info"></table>
 			<div id="notes">
-				<p>・ファイルはいずれもtopojson</p>
+				<p>・2022/03/07：都道府県別のデータを追加</p>
 				<p>・表示区域は島嶼部など含むすべての地域が表示されるように調整している。その他の調整は元データに従う</p>
 				<p>・全国はsimplify 0.1％、都道府県は1％</p>
-				<p>・市区町村データの出典：国土交通省 国土数値情報（行政区域） https://nlftp.mlit.go.jp/ksj/ （2021年9月28日取得）</p>
-				<p>・選挙区データの出典：東京大学空間情報科学研究センター 西沢明 客員研究員 https://home.csis.u-tokyo.ac.jp/~nishizawa/senkyoku/ （2021年9月28日取得）</p>
+				<p>・市区町村データの出典：<a href="https://nlftp.mlit.go.jp/ksj/" target="_blank">国土交通省 国土数値情報</a>（2021年9月28日取得）</p>
+				<p>・選挙区データの出典：<a href="https://home.csis.u-tokyo.ac.jp/~nishizawa/senkyoku/" target="_blank">東京大学空間情報科学研究センター 西沢明 客員研究員</a>（2021年9月28日取得）</p>
 				<p>・ファイルの仕様などは<a href="https://github.com/smartnews-smri/japan-topography" target="_blank">README</a>をご覧ください</p>
 			</div>
     </div>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 	</body>
 </html>
